2002-04-10  jacob berkman  <jacob@ximian.com>

	* Makefile.am (SUBDIRS): add back SUBDIRS

2002-03-28  Richard Hestilow  <hestilow@ximian.com>

	* control/control.c (create_form): Construct list example
	from a single string. Fixes bug #72761.

2002-03-09  Richard Hestilow  <hestilow@ximian.com>
	
	* gtk-theme-selector.glade, main.c: Remove preview option
	and button, this makes no sense with instant apply.
	(select_cb): Just call apply_cb.
	
2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: s/PACKAGE/GETTEXT_PACKAGE/g
	
2002-02-18  Gediminas Paulauskas <menesis@delfi.lt>

	* main.c: fix i18n

2002-02-11  Seth Nickell  <snickell@stanford.edu>

	* gtk-theme-selector.glade:
	* main.c: (call_apply), (response_cb), (main):

	Convert to instant apply.

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* main.c (themes_list_refresh): Use g_path_get_basename
	(get_selected_theme_name): Ditto
	(install_cb): Use g_signal_connect

	* control/control.c (create_form): Use gtk_menu_shell_append
	(create_form): Use gtk_radio_button_get_group,
	set entry max length explicitly

2002-01-28  Richard Hestilow  <hestilow@ximian.com>

	* main.c: Include gconf-client.h, add trailing NULLs to all
	gconf_client calls (for GError).

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* gtk-theme-selector.desktop.in.in:

	Add Categories field.

2002-01-27  Richard Hestilow  <hestilow@ximian.com>

	* control/control.c: Include string.h.
	(create_form): Defer modifying default rc files until property is set.
	(set_prop_cb): Set default files here instead.
	
2002-01-21  Anders Carlsson  <andersca@gnu.org>

	* main.c: Get the theme name right.

	* control/control.c (create_form): Use a GtkTreeView instead of a
	clist.

2002-01-21  Richard Hestilow  <hestilow@ximian.com>

	* Complete rewrite.

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Update

2002-01-04  Bradford Hovinen  <hovinen@ximian.com>

	* control/Makefile.am (gnome_theme_preview_LDADD): Use