@@ -1,3 +1,10 @@
+2002-04-10  Rachel Hestilow  <hestilow@ximian.com>
+	
+	* gnome-font-and-theme-properties.glade: Add font options to UI.
+
+	* gnome-font-and-theme-properties.c (setup_dialog): Add peditors
+	for fonts.
+	
 2002-04-10  jacob berkman  <jacob@ximian.com>
 
 	* Makefile.am (SUBDIRS): add back SUBDIRS
